# leicester

./: LICENSE  README.md
services/otp/: .gitignore  README.md  dev.sh
services/otp/data/: leicester.osm.pbf
services/playground/: .pdm-python  count_points.py  pyproject.toml  town_boundaries_to_geo_json.py
services/playground/data/: count_points.csv
services/playground/output/: count_points_map.html
services/ui/: README.md  dev.sh
