[project]
name = "playground"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ayaviri", email = "joshuayaviri@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "folium>=0.19.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
